--- a/app/elements/app-list/app-list.html
+++ b/app/elements/app-list/app-list.html
@@ -251,6 +251,11 @@
               <neevcollection-report></neevcollection-report>
             </div>
           </section>
+          <section data-category="detaildaycollection-report">
+            <div class="col-md-12">
+              <detaildaycollection-report></detaildaycollection-report>
+            </div>
+          </section>          
           </iron-pages>
           </div>
           </div>
