--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -252,3 +252,4 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="installment-pattern-change/installment-pattern-change.html">
 <link rel="import" href="notpaid-report/notpaid-report.html">
 <link rel="import" href="neevcollection-report/neevcollection-report.html">
+<link rel="import" href="detaildaycollection-report/detaildaycollection-report.html">
