--- a/app/elements/schedule-service/schedule-service.html
+++ b/app/elements/schedule-service/schedule-service.html
@@ -435,6 +435,7 @@
         document.querySelector('fee-collection-report-card').gradearr=gradearr;
         document.querySelector('pendingfee-report').gradearr=gradearr;
         document.querySelector('gradewise-fee-structure-report').gradearr=gradearr;
+        document.querySelector('detaildaycollection-report').gradearr=gradearr;
         document.querySelector('enrollment-report').gradearr=gradearr;
         document.querySelector('daycollection-report').gradearr=gradearr;
         document.querySelector('notpaid-report').gradearr=gradearr;
