--- a/app/elements/appregfee-installment-card/appregfee-installment-card.html
+++ b/app/elements/appregfee-installment-card/appregfee-installment-card.html
@@ -118,9 +118,9 @@
             obj.amount=this.amount;
             obj.waiveoff=localStorage.getItem("curr_sess_waiveoff");
             obj.paymentmode=paymenttype;
-            obj.installmentdate=this.installmentdate;            
-            obj.paiddate=current_date;
-            obj.receiptdate=localStorage.getItem("curr_sess_receiptdate");
+            obj.installmentdate=localStorage.getItem("curr_sess_date");            
+            obj.paiddate=localStorage.getItem("curr_sess_date");
+            obj.receiptdate=localStorage.getItem("curr_sess_date");
             obj.paidstatus="paid";
             this.FnPrepareInstallment(obj);   
             // installmentarr.push(obj);
@@ -159,11 +159,11 @@
             obj.amount=this.amount;
             obj.waiveoff=localStorage.getItem("curr_sess_waiveoff");
             obj.paymentmode=paymenttype;
-            obj.installmentdate=this.installmentdate;
+            obj.installmentdate=localStorage.getItem("curr_sess_date");
             obj.chequeno=this.chequeno;
             obj.bankname=this.bankname;
             obj.chequedate=localStorage.getItem("curr_sess_installmentdate");
-            obj.receiveddate=current_date;            
+            obj.receiveddate=localStorage.getItem("curr_sess_date");            
             obj.chequestatus="inprogress";          
             obj.paidstatus="paid";
             obj.receiptdate=localStorage.getItem("curr_sess_receiptdate");
@@ -202,10 +202,10 @@
             obj.amount=this.amount;
             obj.waiveoff=localStorage.getItem("curr_sess_waiveoff");
             obj.paymentmode=paymenttype;
-            obj.installmentdate=this.installmentdate;
+            obj.installmentdate=localStorage.getItem("curr_sess_date");
             obj.referenceno=this.referenceno;
             obj.bankname=this.refbankname;            
-            obj.receiveddate=localStorage.getItem("curr_sess_chequedate");   
+            obj.receiveddate=localStorage.getItem("curr_sess_date");   
             obj.paiddate=localStorage.getItem("curr_sess_chequedate");       
             obj.chequedate=localStorage.getItem("curr_sess_installmentdate");
             obj.paidstatus="paid";  
