--- a/app/elements/app-list/app-list.html
+++ b/app/elements/app-list/app-list.html
@@ -255,7 +255,17 @@
             <div class="col-md-12">
               <detaildaycollection-report></detaildaycollection-report>
             </div>
-          </section>          
+          </section>  
+          <section data-category="detailed-feedue-report">
+            <div class="col-md-12">
+              <detailed-feedue-report></detailed-feedue-report>
+            </div>
+          </section> 
+          <section data-category="dailycollection-dashboard">
+            <div class="col-md-12">
+              <dailycollection-dashboard></dailycollection-dashboard>
+            </div>
+          </section>       
           </iron-pages>
           </div>
           </div>
