--- a/app/elements/elements.html
+++ b/app/elements/elements.html
@@ -253,3 +253,6 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="notpaid-report/notpaid-report.html">
 <link rel="import" href="neevcollection-report/neevcollection-report.html">
 <link rel="import" href="detaildaycollection-report/detaildaycollection-report.html">
+<link rel="import" href="update-preapps/update-preapps.html">
+<link rel="import" href="detailed-feedue-report/detailed-feedue-report.html">
+<link rel="import" href="dailycollection-dashboard/dailycollection-dashboard.html">
